--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,26 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title">タイトル画面</string>
-    <string name="next">次へ</string>
-    <string name="one">第一世代</string>
-    <string name="two">第二世代</string>
-    <string name="three">第三世代</string>
-    <string name="four">第四世代</string>
-    <string name="five">第五世代</string>
-    <string name="six">第六世代</string>
-    <string name="seven">第七世代</string>
-    <string name="eight">第八世代</string>
+    <string name="select_generation">世代選択</string>
+    <string name="whoisthat">だーれだ？</string>
+    <string name="question_count">%d問目</string>
+    <string name="your_answer">あなたの回答</string>
+    <string name="correct_answer">答え</string>
+    <string name="to_title">タイトルに戻る</string>
+    <string name="timer">%d</string>
+    <string name="correct">正解</string>
+    <string name="incorrect">不正解</string>
+    <string name="answer_is">正解は%sでした！</string>
+    <string name="to_next">次へ</string>
+    <string name="great_1">お見事！</string>
+    <string name="great_2">素晴らしい！</string>
+    <string name="great_3">ナイス！</string>
+    <string name="great_4">あっぱれ！</string>
+    <string name="great_5">やった！</string>
+    <string name="easy">イージー</string>
+    <string name="hard">ハード</string>
+    <string name="answer">回答</string>
+    <string name="input_pokemon">ポケモンの名前を入力</string>
+    <string name="mode">%sモード</string>
+    <string name="score">スコア：%d/10</string>
 </resources>
